deploy/yamls/dotnet5webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: dotnet5webapp
  name: dotnet5webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: dotnet5webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: dotnet5webapp
      name: dotnet5webapp
    spec:
      containers:
        - image: quay.com/parodos/dotnet5webapp:latest
          imagePullPolicy: Always
          name: dotnet5webapp
          ports:
            - containerPort: 5001
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
