deploy/yamls/dotnet5webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: dotnet5webapp
  name: dotnet5webapp
spec:
  ports:
    - name: port-5001
      port: 5001
      targetPort: 5001
    - name: port-5000
      port: 5000
      targetPort: 5000
  selector:
    move2kube.konveyor.io/service: dotnet5webapp
  type: ClusterIP
status:
  loadBalancer: {}
